make sure tooltip fits on mobile screens

--- a/src/styles/components/Tooltip.sass
+++ b/src/styles/components/Tooltip.sass
@@ -13,7 +13,7 @@
   z-index: 10
   display: none
 
-  &::before
+  .arrow
     position: absolute
     content: ''
     display: none
@@ -24,14 +24,14 @@
   &.active
     display: block
     
-    &::before
+    .arrow
       display: block
 
   &.bottom
     margin-top: $arrow-size + 0.1rem
     +center-x
 
-    &::before
+    .arrow
       border-width: 0 $arrow-size $arrow-size $arrow-size
       border-color: transparent transparent $bg transparent
       top: -$arrow-size
@@ -42,7 +42,7 @@
     bottom: 100%
     +center-x
 
-    &::before
+    .arrow
       border-width: $arrow-size $arrow-size 0 $arrow-size
       border-color: $bg transparent transparent transparent
       bottom: -$arrow-size
@@ -53,7 +53,7 @@
     left: 100%
     +center-y
 
-    &::before
+    .arrow
       border-width: $arrow-size $arrow-size $arrow-size 0
       border-color: transparent $bg transparent transparent
       left: -$arrow-size
@@ -64,15 +64,8 @@
     right: 100%
     +center-y
 
-    &::before
+    .arrow
       border-width: $arrow-size 0 $arrow-size $arrow-size
       border-color: transparent transparent transparent $bg
       right: -$arrow-size
       +center-y
-
-  &.error
-    $bg: $md-red
-    background: $bg
-
-    &::before
-      border-bottom-color: $bg
